<resources>
    <string name="app_name">Retail Management System</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="application_name">RetailMS</string>
    <string name="application_sub_title">Quản lý bán hàng dễ dàng</string>
    <string name="loading_str">Loading…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_image_src">Chọn ảnh sản phẩm</string>
    <string name="button_login_txt">ĐĂNG NHẬP</string>
    <string name="product_price_and_stock">Giá bán: %,.0f đ | Kho: %2$d %3$s</string>
    <string name="product_price_format">%,.0fđ</string>
    <string name="default_category">Nước giải khát</string>
    <string name="status_available">Còn hàng</string>
    <string name="status_empty">Còn hàng</string>
    <string name="default_price">12,000đ</string>
    <string name="default_product_name">Coca Cola 330ml</string>
    <string name="default_image_view_content_description">TODO</string>
    <string name="label_product_id">Mã sản phẩm</string>
    <string name="default_product_id">SP001</string>
    <string name="label_category">Danh mục</string>
    <string name="label_price">Giá bán</string>
    <string name="label_import_price">Giá nhập</string>
    <string name="default_import_price">10,000đ</string>
    <string name="label_stock">Tồn kho</string>
    <string name="default_stock">150</string>
    <string name="default_description">Nước giải khát có ga Coca Cola 330ml, sản phẩm được ưa chuộng.</string>
    <string name="label_description">Mô tả</string>
    <string name="btn_import_product">NHẬP HÀNG</string>
    <string name="default_content_desc_product_img">Product Image</string>
    <string name="label_select_all">Tất cả</string>
    <string name="label_select_available">Còn hàng</string>
    <string name="label_select_empty">Hết hàng</string>
    <string name="desc_floating_add_btn">Floating Add Button</string>
    <string name="title_icon_search">Tìm kiếm</string>
    <string name="title_icon_filter">Lọc</string>
    <string name="title_nav_home">Trang chủ</string>
    <string name="title_nav_product">Sản phẩm</string>
    <string name="title_nav_customer">Khách hàng</string>
    <string name="title_nav_report">Báo cáo</string>
    <string name="title_nav_setting">Cài đặt</string>
    <string name="title_icon_notifications">Thông báo</string>
    <string name="default_system_greeting">Xin chào, Admin</string>
    <string name="default_sub_system_greeting">Chúc bạn một ngày làm việc hiệu quả!</string>
    <string name="desc_ic_user">TODO</string>
    <string name="title_nav_profile">Thông tin tài khoản</string>
    <string name="title_nav_history">Lịch sử hoạt động</string>
    <string name="title_nav_logout">Đăng xuất</string>
    <string name="label_provider">Nhà cung cấp</string>
    <string name="default_provider">Provider A</string>
    <string name="title_action_edit">Sửa</string>
</resources>