<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/title_nav_home" />

    <item
        android:id="@+id/productFragment"
        android:icon="@drawable/ic_product"
        android:title="@string/title_nav_product" />

    <item
        android:id="@+id/customerFragment"
        android:icon="@drawable/ic_customer"
        android:title="@string/title_nav_customer" />

    <item
        android:id="@+id/reportFragment"
        android:icon="@drawable/ic_report"
        android:title="@string/title_nav_report" />

    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/ic_setting"
        android:title="@string/title_nav_setting" />

</menu>
